# cortex

./: .dockerignore  .gitignore  Dockerfile  README.md  devenv.nix
frontal/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontal/app/: layout.tsx  page.tsx
frontal/components/: dashboard.tsx  indices-table.tsx  loading.tsx  node-info.tsx  nodes-table.tsx  recovery-table.tsx  relocating-histogram.tsx  relocating-table.tsx  relocation-flow.tsx  shard-table.tsx
frontal/components/ui/: data-table.tsx  dialog.tsx  filter-view.tsx  navbar.tsx  stat-card.tsx  table.tsx
frontal/lib/: utils.ts
parietal/: Cargo.toml  log.txt
parietal/.config/: config.toml
parietal/.data/: _cat_indices.json  _cat_shards.json  _cluster_health.json  _nodes.json
parietal/bindings/: ClusterInfo.ts  FilesInfo.ts  IndexInfo.ts  IndexRecovery.ts  NodeInfo.ts  RecoveryShard.ts  ShallowShard.ts  SizeInfo.ts  TranslogInfo.ts  TransportIndexInfo.ts  VerifyIndexInfo.ts
parietal/src/: config.rs  data.rs  devenv.nix  elastic.rs  graphql.rs  main.rs  rest.rs
parietal/src/elastic/: client.rs  data.rs  demo.rs  mod.rs
