[package]
name = "parietal"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
ts-rs = "9.0.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-epoch"] }
