[package]
name = "parietal"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
ts-rs = { version = "9.0.1", features = ["chrono-impl", "no-serde-warnings", "bigdecimal", "bigdecimal-impl"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-epoch"] }
log = "0.4.22"
env_logger = "0.11.3"
juniper = { version = "0.16.1", features = ["chrono", "time", "bigdecimal"] }
juniper_warp = "0.8.0"
serde_with = "3.8.3"
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = "0.4.5"
